[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chainguard_ai_env"
version = "1.0.0"
description = "A real-world OpenEnv simulation for Supply Chain Security."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nyx-Noctrine"}
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"
